--- a/CRM/CRM/Base.lproj/Main.storyboard
+++ b/CRM/CRM/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="AEP-EJ-Krf">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -421,7 +421,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zHx-zo-6NM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2584" y="-377"/>
+            <point key="canvasLocation" x="2515" y="-484"/>
         </scene>
         <!--客户名称-->
         <scene sceneID="fIJ-aj-xs6">
@@ -492,7 +492,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aW8-qW-ngC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2592" y="932"/>
+            <point key="canvasLocation" x="2582" y="904"/>
         </scene>
         <!--客户详细资料-->
         <scene sceneID="zU4-ri-N3K">
@@ -559,7 +559,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3xu-3l-h2p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3025" y="932"/>
+            <point key="canvasLocation" x="2991" y="904"/>
         </scene>
         <!--客户详细资料编写-->
         <scene sceneID="gs8-mM-eq2">
@@ -632,50 +632,33 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bNE-Nf-Iwr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2115" y="181"/>
+            <point key="canvasLocation" x="2173" y="200"/>
         </scene>
-        <!--创建客户-->
-        <scene sceneID="gCD-zs-GS3">
+        <!--Table View Controller-->
+        <scene sceneID="jUl-Gj-aWd">
             <objects>
-                <viewController id="Yfk-Jj-i6t" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="IhT-cq-g8s"/>
-                        <viewControllerLayoutGuide type="bottom" id="6Q9-E6-38C"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="g5C-Ll-uzP">
+                <tableViewController id="vMu-16-0Mr" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tsM-0e-CsR">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="VGO-Pe-662">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="unb-L4-9DU">
-                                        <rect key="frame" x="0.0" y="0.0" width="330" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="unb-L4-9DU" id="qPZ-mL-cXZ">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="VGO-Pe-662" firstAttribute="top" secondItem="g5C-Ll-uzP" secondAttribute="topMargin" id="DNF-j9-sco"/>
-                            <constraint firstItem="VGO-Pe-662" firstAttribute="leading" secondItem="g5C-Ll-uzP" secondAttribute="leadingMargin" constant="-16" id="EMj-nR-3Xb"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="VGO-Pe-662" secondAttribute="trailing" constant="-16" id="Qq5-aT-Xh8"/>
-                            <constraint firstItem="6Q9-E6-38C" firstAttribute="top" secondItem="VGO-Pe-662" secondAttribute="bottom" id="pKh-Ow-vGu"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="创建客户" id="7xY-KK-lVB">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="9LB-DH-1GK"/>
-                    </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Iba-xM-SQj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cMT-ic-mcO">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cMT-ic-mcO" id="f92-g5-x4K">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vMu-16-0Mr" id="bYO-gj-lfH"/>
+                            <outlet property="delegate" destination="vMu-16-0Mr" id="HBg-Mo-LkY"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J8Q-7Z-RUK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2654" y="250"/>
+            <point key="canvasLocation" x="2548" y="199"/>
         </scene>
         <!--联系人名称-->
         <scene sceneID="RPz-uD-uLx">
@@ -1189,7 +1172,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3nW-86-OGg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2156" y="932"/>
+            <point key="canvasLocation" x="2050" y="1202"/>
         </scene>
         <!--个人-->
         <scene sceneID="fBH-gI-KmJ">
